ProjetCompil/Verif/Test/fail/typeInconnu.cas
-- Recherche dichotomique dans un tableau trie 
program
   i : fauxType;
begin
   i := 1; 
end.